--- a/css/style.css
+++ b/css/style.css
@@ -22,7 +22,7 @@ section#banner { margin-top: 100px; }
 section#banner .textobanner { margin-top: 120px; text-align: right; }
 section#banner h1 { font-size: 3.5rem; color: #32577F; font-weight: bolder; }
 section#banner p { margin-top: 30px; color: #A2CFFF; font-size: 1.4rem; }
-section#banner a.btn { margin-top: 30px; padding: 15px 70px; background: #32577F; font-weight: bold; text-transform: uppercase; }
+section#banner a.btn { margin-top: 30px; padding: 15px 70px; background: #32577F; font-weight: bold; text-transform: uppercase; border: none; }
 
 /*Cambios en servicios*/
 section#servicios, section#testimonios { height: 70vh; display: flex; justify-content: center; align-items: center; text-align: center; }
@@ -40,11 +40,11 @@ section#contacto button[type="submit"] { margin-top: 40px; padding: 20px 40px; }
 
 /* Navegacion lateral de categorias */
 section#categorias { background-color: #EEF6FF; }
-section#categorias ul { background: #fff; border-radius: 4px; width: 100%; padding: 20px; height: 700px; box-shadow: 6px 0 10px rgba(0, 0, 0, 0.089), 0px 0px 0px rgba(0, 0, 0, 0.22); }
+section#categorias ul { background: #fff; border-radius: 4px; width: 100%; padding: 20px; height: 700px; margin-top: -15px; z-index: -1 !important; box-shadow: 6px 0 10px rgba(0, 0, 0, 0.089), 0px 0px 0px rgba(0, 0, 0, 0.22); }
 section#categorias ul li { margin: 25px 20px; }
 section#categorias ul li a { color: #32577F !important; font-size: 1.2rem; }
 section#categorias ul li img { margin-right: 20px; }
-section#categorias #nav-left p { font-size: 1.15rem; text-align: center; background: #32577F; padding: 5px; color: #EEF6FF; font-weight: 600; text-transform: uppercase; }
+section#categorias #nav-left p { font-size: 1.15rem; text-align: center; background: #32577F; padding: 5px; border-radius: 4px; color: #EEF6FF; font-weight: 600; text-transform: uppercase; }
 
 /*Seccion destacados*/
 section#destacados h3 { text-transform: uppercase; color: #32577F; font-weight: 400; }
@@ -73,6 +73,24 @@ section#perfil .profile .datos .separadores { border-left: 1px solid #EEF6FF; bo
 section#perfil .profile .datos p { font-size: 2rem; color: #EEF6FF; font-weight: bolder; }
 section#perfil .profile .servicios { margin-top: 6px; background-color: #A2CFFF; border-radius: 4px; min-height: 180px; padding: 20px; display: flex; justify-content: center; align-items: center; flex-direction: space-around; text-align: center; }
 section#perfil .profile .servicios img { border: 3px #EEF6FF solid; border-radius: 4px; }
+
+/*Perfil usuario*/
+section#perfilotro { margin-top: 50px; background-color: #EEF6FF; }
+section#perfilotro .menu { height: 100%; width: 200px; background-color: #EEF6FF; overflow-x: hidden; padding-top: 20px; }
+section#perfilotro .menu h4 { background-color: #A2CFFF; text-transform: uppercase; color: #32577F; font-size: 1.3rem; font-weight: 600; padding: 9px 8px 9px 16px; border-radius: 4px; }
+section#perfilotro .menu .enlaces { background-color: #fff; margin-top: -7px; }
+section#perfilotro .menu a { padding: 7px 12px 7px 17px; text-decoration: none; font-size: 1.1rem; color: #32577F; display: block; }
+section#perfilotro .menu a:hover { color: #A2CFFF; }
+section#perfilotro .profile { margin-bottom: 50px; }
+section#perfilotro .profile .fondo-profile { width: 100%; min-height: 180px; border-radius: 4px; margin-bottom: 6px; background: url(http://placehold.it/1200x200) center center no-repeat/cover; display: flex; justify-content: center; align-items: center; }
+section#perfilotro .profile .fondo-profile img { margin-bottom: -195px; border: 3px solid #A2CFFF; border-radius: 35px; }
+section#perfilotro .profile .opiniones { margin-top: 6px; background-color: #A2CFFF; padding: 30px; border-radius: 4px; min-height: 200px; display: flex; justify-content: center; align-items: center; flex-direction: space-around; text-align: center; }
+section#perfilotro .profile .opiniones h4 { color: #32577F; text-transform: uppercase; font-size: 1.1rem; font-weight: bold; text-align: center; }
+section#perfilotro .profile .opiniones .opinion { background-color: #EEF6FF; padding: 6px 25px; margin: 10px; border-radius: 4px; display: flex; justify-content: center; align-items: center; }
+section#perfilotro .profile .opiniones .opinion .foto-perfil { border: 2px solid #A2CFFF; border-radius: 25px; margin-left: -10px; }
+section#perfilotro .profile .opiniones p { font-size: 2rem; color: #EEF6FF; font-weight: bolder; }
+section#perfilotro .profile .servicios { background-color: #A2CFFF; border-radius: 4px; min-height: 180px; padding: 20px; display: flex; justify-content: center; align-items: center; flex-direction: space-around; text-align: center; }
+section#perfilotro .profile .servicios img { border: 3px #EEF6FF solid; border-radius: 4px; }
 
 /*Seccion pagina de servicio*/
 section#servicio { background: #EEF6FF; }
