cosas dinamicas añadidas + admin.php y conexiones a base de datos

--- a/sass/style.scss
+++ b/sass/style.scss
@@ -692,8 +692,58 @@ section#login{
 
 /*Footer*/
 footer{
-    height: 200px;
-    background-color: #343A40;
-    color: white;
+    width: 100%;
+    height: 50vh;
+    background-color: $dark;
     @include flexible(null, center);
+    color: $grisclaro;
+    div .col-md-4{
+        margin-top: 50px;
+        p{
+            font-weight: 200;
+            font-size: .95rem;
+            color: #B5B8BE;
+        }
+    }
+
+    .logo{
+        font-size: 2rem;
+        color: $grisclaro;
+        margin-bottom: 30px;
+        span{
+            color: $primary;
+        }
+    }
+    a .fa{
+        background-color: #4B505D;
+        color: $grisclaro;
+        border-radius: 50%;
+        padding: 18px;
+        width: 50px;
+        height: 50px;
+        text-align: center;
+        transition: 0.2s all;
+        margin-right: 10px;
+        margin-top: 25px;
+        &:hover{
+            opacity: 0.7;
+        }
+
+    }
+
+    h4{
+        color: $grisclaro;
+        margin-bottom: 40px;
+    }
+    
+    hr{
+        margin-top: 60px;
+        border: .4px solid #353A49;
+    }
+    .copy{
+        color: #B5B8BE;
+        @include flexible(null, center);
+        font-size: 0.9rem;
+        margin-top: 35px;
+    }
 }
