--- a/css/style.css
+++ b/css/style.css
@@ -154,6 +154,15 @@ section#login h2 { display: inline-block; margin-left: 10px; margin-top: 20px; p
 section#login h2 a { color: #A2CFFF; }
 
 /*Footer*/
-footer { height: 200px; background-color: #343A40; color: white; display: flex; justify-content: center; align-items: center; text-align: center; }
+footer { width: 100%; height: 50vh; background-color: #32577F; display: flex; justify-content: center; align-items: center; text-align: center; color: #EEEEEE; }
+footer div .col-md-4 { margin-top: 50px; }
+footer div .col-md-4 p { font-weight: 200; font-size: .95rem; color: #B5B8BE; }
+footer .logo { font-size: 2rem; color: #EEEEEE; margin-bottom: 30px; }
+footer .logo span { color: #A2CFFF; }
+footer a .fa { background-color: #4B505D; color: #EEEEEE; border-radius: 50%; padding: 18px; width: 50px; height: 50px; text-align: center; transition: 0.2s all; margin-right: 10px; margin-top: 25px; }
+footer a .fa:hover { opacity: 0.7; }
+footer h4 { color: #EEEEEE; margin-bottom: 40px; }
+footer hr { margin-top: 60px; border: .4px solid #353A49; }
+footer .copy { color: #B5B8BE; display: flex; justify-content: center; align-items: center; text-align: center; font-size: 0.9rem; margin-top: 35px; }
 
 /*# sourceMappingURL=style.css.map */
