--- a/css/style.css
+++ b/css/style.css
@@ -75,6 +75,7 @@ section#perfil .profile .datos .separadores { border-left: 1px solid #EEF6FF; bo
 section#perfil .profile .datos p { font-size: 2rem; color: #EEF6FF; font-weight: bolder; }
 section#perfil .profile .servicios { margin-top: 6px; background-color: #A2CFFF; border-radius: 4px; min-height: 180px; padding: 20px; display: flex; justify-content: center; align-items: center; flex-direction: space-around; text-align: center; }
 section#perfil .profile .servicios img { border: 3px #EEF6FF solid; border-radius: 4px; }
+section#perfil .profile .servicios img:hover { opacity: 0.7; transition: 0.1s; }
 
 /*Perfil usuario*/
 section#perfilotro { margin-top: 50px; background-color: #EEF6FF; }
@@ -107,7 +108,8 @@ section#servicio #descripcion ul { color: #777B7F; }
 section#servicio #descripcion img { max-height: 11%; max-width: 11%; }
 
 /*Pagina de busqueda de servicio*/
-div#busqueda .item_busqueda { padding: 3px 10px; margin: 20px; background-color: white; border-radius: 3px; box-shadow: 0 0px 1px rgba(0, 0, 0, 0.12), 0 0px 5px rgba(0, 0, 0, 0.24); }
+div#busqueda .item_busqueda { padding: 20px 5px; margin: 20px; background-color: white; border-radius: 3px; box-shadow: 0 0px 1px rgba(0, 0, 0, 0.12), 0 0px 5px rgba(0, 0, 0, 0.24); }
+div#busqueda .item_busqueda img { margin-top: 10px; }
 div#busqueda .item_busqueda h4 { color: #32577F; font-weight: 600; }
 div#busqueda .item_busqueda h4 img { max-height: 5%; max-width: 5%; }
 div#busqueda .item_busqueda p { color: #777B7F; }
@@ -121,8 +123,12 @@ div#busqueda .item_busqueda a.btn:hover { background: #192d42; box-shadow: 0 4px
 /*Header */
 header#header2 { background-color: #A2CFFF; max-width: 100%; }
 header#header2 .navbar { background-color: #A2CFFF !important; min-height: 100px; }
-header#header2 ul a { color: #32577F; font-size: 1.2rem; }
+header#header2 ul a.btn { background: #32577F; color: #EEEEEE; font-size: 1.2rem; border: none; padding: 5px 20px; }
+header#header2 ul a.btn:hover { background: #192d42; box-shadow: 0 4px 6px rgba(0, 0, 0, 0.16), 0 3px 6px rgba(0, 0, 0, 0.23); }
+header#header2 ul a.btn img { max-height: 15%; max-width: 15%; }
+header#header2 ul a { margin-right: 20px; }
 header#header2 ul a img { max-height: 15%; max-width: 15%; }
+header#header2 ul label:hover { color: #32577F; transition: 0.1s; }
 
 /*Intercambios*/
 section#intercambio { background: #EEF6FF; }
@@ -143,7 +149,7 @@ section#intercambio .list-group { border: 1px solid #32577F; border-radius: 4px;
 section#intercambio .list-group .active { background-color: #A2CFFF; border: none; color: #32577F; font-weight: 600; }
 section#intercambio input[type=text] { margin-top: 20px; background: #EEF6FF; border: none; border-radius: 6px; display: block; padding: 25px 95px; }
 
-section#login { background: #EEF6FF; }
+section#login { padding: 50px; }
 section#login form#contenido_form { background-color: #A2CFFF; border: 2px solid #32577F; padding: 50px; border-radius: 5px; margin: 20px; }
 section#login form#contenido_form button { margin-top: 20px; padding: 5px 50px; background-color: #32577F; border: none; text-align: center; text-transform: uppercase; }
 section#login form#contenido_form button:hover { background: #192d42; box-shadow: 0 4px 6px rgba(0, 0, 0, 0.16), 0 3px 6px rgba(0, 0, 0, 0.23); }
